--- a/index.html
+++ b/index.html
@@ -37,14 +37,7 @@
             <p class="slogan"><strong>我們的競選口號是：</strong></p>
             <p class="slogan-highlight">「探索Champions，成為Champions，超越Champions」</p>
             
-            <!-- 添加图片轮播 -->
-            <div class="image-carousel">
-                <img src="Klss-ice-cream-image.jpg" alt="活動照片1" class="active">
-                <img src="Klss-ice-cream-image.jpg" alt="活動照片2">
-                <img src="Klss-ice-cream-image.jpg" alt="活動照片3">
-                <div class="carousel-arrow left">&#10094;</div>
-                <div class="carousel-arrow right">&#10095;</div>
-            </div>
+            <!-- 删除图片轮播 -->
         </section>
         <!-- 其他部分的内容 -->
         
