--- a/index.html
+++ b/index.html
@@ -6,6 +6,35 @@
     <title>Champions！候選內閣</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <style>
+        .countdown-container {
+            background-color: #f0f0f0;
+            border-radius: 5px;
+            padding: 10px;
+            margin-top: 15px;
+            text-align: center;
+            font-weight: bold;
+        }
+        .countdown-label {
+            color: #333;
+            margin-right: 5px;
+        }
+        .countdown {
+            color: #007bff;
+            font-size: 1.1em;
+        }
+        .email-link {
+            background-color: #007bff;
+            color: white;
+            padding: 2px 5px;
+            border-radius: 3px;
+            text-decoration: none;
+            transition: background-color 0.3s ease;
+        }
+        .email-link:hover {
+            background-color: #0056b3;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -45,7 +74,10 @@
             <h2>聯絡我們</h2>
             <p>我們非常重視您的意見和建議。如果您有任何問題或想法，請隨時與我們聯繫。</p>
             <div class="contact-info">
-                <p>Email：randyxian08@gmail.com</p>
+                <p>Email：
+                    <a href="mailto:randyxian08@gmail.com" class="email-link">randyxian08@gmail.com</a>, 
+                    <a href="mailto:yutangtang6@gmail.com" class="email-link">yutangtang6@gmail.com</a>
+                </p>
                 <p>Instagram：@klss_champions</p>
                 <p>辦公室地：高雷中學學生活動中心 SU</p>
             </div>
